# SaBeDin

./: .env  .gitignore  Cargo.toml  docker-compose.yaml  queue_topics.settings  readme.md  todo
docker/: docker-compose.yaml  rabbitmq.conf
fe/: package.json  tsconfig.json
fe/sabedin/: README.md  tsconfig.json
fe/sabedin/app/: layout.tsx  page.tsx
fe/sabedin/app/lib/: definitions.ts  utils.ts
fe/sabedin/app/login/: page.tsx
fe/sabedin/app/ui/: fonts.ts  sabedin-logo.tsx
fe/src/: App.tsx  app.css  index.tsx
fe/src/components/common/: footer.tsx  navBar.tsx
fe/src/components/healthcheck/: healthcheck.tsx
fe/src/components/homepage/: article.tsx  works.tsx
fe/src/components/login/: login.tsx
fe/src/components/projects/: allprojects.tsx  project.tsx
fe/src/components/sidenav/: navlinks.tsx  sidenav.tsx
fe/src/data/: my_informations.ts  styles.css
fe/src/lib/: client.ts  definitions.ts
fe/src/pages/: homepage.tsx
fe/src/pages/styles/: homepage.css
request_body_jsons/: login_user.json  register_user.json
src/: REST_definitions.md  config.rs  main.rs  route.rs
src/cache/core/: basic_cache.rs  basic_cache_test.rs  mod.rs  persistent_cache.rs  persistent_cache_test.rs
src/core/: app.rs  mod.rs
src/core/client/: auth.rs  core.rs  mod.rs  user.rs
src/core/contracts/: authentication_provider.rs  basic_informations.rs  builtin_types.rs  dependency_container.rs  errors.rs  file_helper.rs  mod.rs  query_params.rs  queue_types.rs  service_manager_provider.rs  services.rs  system_messages.rs  uri_helper.rs  user.rs
src/core/contracts/base/: basic_informations.rs  custom_macros.rs  dependency_container.rs  errors.rs  mod.rs  query_params.rs  queue_types.rs  system_messages.rs  token.rs
src/core/contracts/dtos/: idempotency_info.rs  (+2 more)
src/core/persistence/: auth_persistence.rs  db_pool.rs  mod.rs  persistence.rs  persistence_errors.rs  persistence_utils.rs  query_builder.rs  query_builder_tests.rs  table_name_supplier.rs  table_names.rs  type_interpreter.rs
src/core/service/: administration_service.rs  authentication_service.rs  authentication_service_test.rs  mod.rs  push_messenger.rs  service_base.rs  user_service.rs
src/core/utils/: async_executor.rs  file_helper.rs  jwt.rs  mod.rs  password.rs  test_helper.rs  uri_helper.rs  utils.rs
src/example/portfolio/: init.rs  mod.rs
src/logger/: core_logger.rs  logging_provider.rs  mod.rs
src/migrations/: 20240226180012_init.down.sql  20240226180012_init.up.sql
src/queue_manager/: consumer.rs  manager.rs  mod.rs  post_only_publisher.rs  publisher.rs  queue_tests.rs  receiver.rs
src/request_handler/: auth_handler.rs  mod.rs  request_handler.rs
src/routes/: auth_routes.rs  main_route.rs  mod.rs
src/routes/middlewares/: guard.rs
src/service_manager/: lookup_client.rs  lookup_client_test.rs  mod.rs  params_object_builder.rs  service_client_factory.rs  service_client_factory_test.rs  service_manager.rs  service_manager_test.rs
src/tests/: mod.rs  queue_tests.rs  service_manager_test.rs
src/tests/common/: db_mock.rs  mod.rs  test_helper.rs
(+29 files in other folders)
