[package]
name = "SaBeDin_crm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.33"
amqprs = "1.5.3"
tower-http = {version="0.5.1", features = ["cors"]}
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
argon2 = "0.5.0"
time = "0.3.34"
rand_core = "0.6.4"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]